Renders the profile name button in profile chooser view for supervised user.

BUG=596423

Review URL: https://codereview.chromium.org/1830903006

Cr-Commit-Position: refs/heads/master@{#383254}

Former-commit-id: ee6ba2af8c8cc70e1b12d22e3e68a9244145a253